--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data source =datingapp.db"
-  }
+  },
+  "Tokenkey":"super secret unguessable key"
 }
