--- a/client/angular.json
+++ b/client/angular.json
@@ -25,7 +25,9 @@
             "styles": [
               
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootswatch/dist/United/bootstrap.css",
               "./node_modules/font-awesome/css/font-awesome.min.css", 
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -98,6 +100,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": []
